# spiders-for-all

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  before_commit.sh  main.py  package-lock.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish_pypi.yml  test_and_lint.yml
bilibili/: __main__.py  analysis.py  bilibili.db  db.py  download.py  models.py  spiders.py  tmp.py
conf/: settings.py
core/: base.py
example/: example_common.sh  run.sh
example/bilibili/: example_download_video.sh  example_run_spider.sh  example_user_dynamic.sh  example_user_post_videos.sh
example/xhs/: example_download_by_id.sh  example_get_comments.sh  example_user_post.sh
scripts/: init_db.py
spiders_for_all/: __main__.py  const.py
spiders_for_all/bilibili/: __main__.py  analysis.py  db.py  download.py  models.py  spiders.py
spiders_for_all/conf/: settings.py
spiders_for_all/core/: __init__.py  base.py  client.py  db.py  downloader.py  exception.py  media.py  response.py  spider.py
spiders_for_all/database/: __main__.py  cli.py  manager.py  schema.py  session.py
spiders_for_all/spiders/bilibili/: README.md  __init__.py  __main__.py  analysis.py  cli.py  const.py  db.py  download.py  downloader.py  models.py  patterns.py  schema.py  sign.py  spiders.py  utils.py
spiders_for_all/spiders/xhs/: README.md  __init__.py  __main__.py  cli.py  const.py  db.py  downloader.py  models.py  patterns.py  schema.py  sign.py  spiders.py
spiders_for_all/static/: xhs.js
spiders_for_all/utils/: decorator.py  helper.py  logger.py
tests/: _utils.py  test_base_spider.py  test_cli.py  test_client.py  test_downloader.py  test_helper.py  test_media.py  test_utils.py
tests/bilibili_tests/: play_info.txt  test_analysis.py  test_download.py  test_spiders.py
utils/: helper.py  logger.py
