[tool.poetry]
name = "spiders-for-all"
version = "0.3.8"
description = ""
authors = ["icebear <iiiicebeaaaar@gmail.com>"]
readme = "README.md"
packages = [{ include = "spiders_for_all" }]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
environs = "^9.5.0"
fake-useragent = "^1.4.0"
pydantic = "^2.5.2"
rich = "^13.7.0"
requests = "^2.31.0"
sqlalchemy = "^2.0.23"
beautifulsoup4 = "^4.12.2"
types-beautifulsoup4 = "^4.12.0.7"
pyexecjs = "^1.5.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.7.1"
ruff = "^0.1.6"
coverage = "^7.3.2"
types-requests = "^2.31.0.10"
pre-commit = "^3.5.0"
pytest = "^7.4.3"
isort = "^5.13.2"
uncurl = "^0.0.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["spiders_for_all"]

[tool.isort]
profile = "black"

[tool.ruff]
# All paths are relative to the project root, which is the directory containing the pyproject.toml.
src = ["spiders_for_all"]
ignore-init-module-imports = true
fix = true

[tool.ruff.lint.flake8-tidy-imports]
# Disallow all relative imports.
ban-relative-imports = "all"

[tool.ruff.lint.isort]
case-sensitive = true